# market-data-toolkit

./: .gitignore  Download Stocks.command  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  stock_data_pipeline.py
docs/: ASSIGNMENT.md  GLOSSARY.md
mdtoolkit/: __init__.py  alignment.py  company.py  config.py  credit.py  excel.py  lineage.py  longtable.py  pipeline.py  sources.py  transforms.py
output/: .gitkeep
