[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-toolkit"
version = "0.2.0"
description = "Equity & macro-rate data pipeline with a structural credit-risk model (Merton/KMV)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "JackyJiang08" }]
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=1.5",
    "numpy>=1.21",
    "scipy>=1.7",
    "openpyxl>=3.1",
    "requests>=2.28",
    "pyarrow>=15",
]

[project.scripts]
market-data-toolkit = "run:main"

[tool.setuptools]
packages = ["mdtoolkit"]
